# ue4ss-installer-core

./: pyproject.toml
src/ue4ss_installer_core/: __init__.py  file_io.py  ue4ss.py
